@@ -1,6 +1,7 @@
 ======= 2.4.0 (BETA)
 
 - added: `components` more in docs
+- added: `X-Powered-By` header again with option to disable it in the framework config `disable-xpoweredby   : false`
 
 - updated: new error message `The field "@" is invalid.`
 - updated: `NOSQL().insert(doc, [unique])`
